ensure that treeview table is aligned at the top (vertically) of the table; Bug #17750
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/trunk/ucs@15807 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-webui-style/style/stylesheet.css
+++ b/management/univention-webui-style/style/stylesheet.css
@@ -1919,6 +1919,7 @@ table.umc_tree_view_table {
 }
 
 td.umc_tree_table_treeview {
+	vertical-align: top;
 	width: 10px;
 }
 
